# dullmv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: dsl-spec.md
examples/: template.dsl  test.dsl
scripts/: setup_dev.py
src/dullmv/: __init__.py  __main__.py  batch.py  cli.py  engine.py  generator.py  parser.py  paths.py
src/dullmv/capcut/: __init__.py  config.py  draft.py  export.py  pipeline.py
templates/: default.yaml
tests/: conftest.py  test_batch.py  test_capcut_config.py  test_capcut_pipeline.py  test_engine_helpers.py  test_parser.py  test_render.py
tests/fixtures/: minimal.dsl  sample.yaml
