[project]
name = "dullmv"
version = "0.1.0"
description = "DSL-driven music video generator"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pillow",
    "librosa",
    "moviepy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dullmv"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
