[project]
name = "dullmv"
version = "0.2.0"
description = "CapCut template-driven music video generator"
requires-python = ">=3.12"
dependencies = [
    "pycapcut>=0.0.3",
    "pyyaml>=6.0.3",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dullmv"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
